# canteen-preorder

./: README.md  canteen.db  main.py  pyproject.toml
.github/workflows/: run_tests.yml
docs/: BACKEND_API.md  SPECIFICATION.md
src/canteen_preorder/: __init__.py  common.py
src/canteen_preorder/backend/: __init__.py
src/canteen_preorder/frontend/: main.py
tests/: test_backend.py
